added uri map and simple fs database

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "nodeunit": "^0.9.1"
   },
   "dependencies": {
-    "q": "^1.4.1"
+    "pg": "^4.5.1",
+    "q": "^1.4.1",
+    "sql": "^0.67.0",
+    "sql.js": "^0.3.1"
   }
 }
