--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodeunit": "^0.9.1"
   },
   "dependencies": {
+    "mongodb": "^2.1.7",
     "pg": "^4.5.1",
     "q": "^1.4.1",
     "sql": "^0.67.0",
